--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
+    "chosen-jquery-browserify": "^1.0.0",
+    "chosen-npm": "^1.4.2",
     "combokeys": "^2.4.6",
     "cssjson": "^2.1.3",
     "dragula": "^3.7.1",
@@ -43,6 +45,7 @@
     "simple-color-picker": "^0.1.0",
     "slick-carousel": "^1.6.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "webfontloader": "^1.6.26"
   }
 }
